0031688: Visualization - Wrong ISO lines for a face created from BSpline

Added a check to see if the ISO line intersects the bounding contour.